# backend-rebase

./: .gitignore  Dockerfile  docker-compose.yml  init.sql  setup.cfg
assignment_1/: HashMap.py  README.md  assignment_1.py
assignment_3/: app.py  config.py  docker-compose.yml  server.py
assignment_3/api/v0/: file_management_routes.py
assignment_3/file_management/: Dockerfile  app.py  pyproject.toml
assignment_3/file_management/api/v0/: file_management_routes.py
assignment_3/load_balancer/: Dockerfile  app.py  load_balancer.py  load_balancer_routes.py  setup.cfg
assignment_3/utils/: logs_handler.py
assignment_3_tests/: test_server.py
assignment_7/: Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  setup.cfg
assignment_7/users/: app.py  config.py  db_utils.py
assignment_7/users/api/v0/: users_routes.py
assignment_7/users/logger/: log_types.py  logger.py
assignment_7/users_tests/: conftest.py  test_db_utils.py  test_users_api.py
page-view-counter/: nodemon.json  package-lock.json  package.json
page-view-counter/src/: index.js
page-view-counter/src/config/: db.js  logger.js
page-view-counter/src/routes/: index.js  pageViews.js
rabbit_api_gw/: .env.example  README.md  package.json
rabbit_api_gw/src/: index.js
rabbit_api_gw/src/routes/: pageViewRoutes.js
rabbit_api_gw/src/services/: queueService.js
reports/: app.py  pytest.ini  setup.cfg
reports/api/v0/: reports_routes.py
reports/tests/: conftest.py  test_reports_api.py
