[metadata]
name = reports api
version = 1.0.0

[options]
# Tell setuptools to find packages under current directory
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    flask
    psycopg2-binary
    logzio-python-handler
    pytest
    pytest-mock